--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
 }
 
 .logo {
@@ -17,6 +16,52 @@
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
+
+@font-face {
+  font-family: 'Lexend Deca';
+  src: url('./assets/fonts/LexendDeca-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lexend Deca';
+  src: url('./assets/fonts/LexendDeca-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lexend Deca';
+  src: url('./assets/fonts/LexendDeca-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lexend Deca';
+  src: url('./assets/fonts/LexendDeca-ExtraBold.ttf') format('truetype');
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('./assets/fonts/Inter_24pt-MediumItalic.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+    /* @font-face {
+    font-family: 'Lexend Deca Regular';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Lexend Deca Regular'), url('./assets/fonts/LexendDecaRegular.woff') format('woff');
+    } */
+
+    body {
+    font-family: 'Lexend Deca', sans-serif;
+    }
 
 @keyframes logo-spin {
   from {
@@ -40,3 +85,37 @@
 .read-the-docs {
   color: #888;
 }
+
+.container-main { 
+  padding: 40px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 14px
+}
+
+@media (max-width: 575.98px) {
+  .container-main {
+    padding: 0px;
+    box-shadow: none;
+  }
+}
+
+.title-session {
+  font-weight: 800;
+  color: #33475B;
+}
+
+.PhoneInputInput {
+  color: #212529;
+  border: 0px;
+} 
+
+
+.PhoneInputInput:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+/* .PhoneInputInput:focus {
+  border: 0px solid #ffffff !important; 
+
+} */
